<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/get_all_courses_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_all_courses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/get_courses_by_id_button"
        android:enabled="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_courses_by_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/get_all_courses_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_course_button"
        android:enabled="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_all_courses_button" />

    <Button
        android:id="@+id/delete_course_by_id"
        android:enabled="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/delete_course_by_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_course_button"
        app:layout_constraintTop_toBottomOf="@+id/get_courses_by_id_button" />

    <Button
        android:id="@+id/delete_all_courses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_all_courses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_course_button" />

    <Button
        android:id="@+id/update_course_by_id"
        android:enabled="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_course_by_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_all_courses"
        app:layout_constraintTop_toBottomOf="@+id/delete_course_by_id" />

    <TextView
        android:id="@+id/courses_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/delete_all_courses"
        app:layout_constraintStart_toStartOf="parent"
        tools:hint="@string/fsdfsd"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/id_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/courses_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/id"
        android:inputType="number"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/tittle_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/id_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/tittle"
        android:textSize="20sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>